# into-sorted

./: Cargo.toml  README.md  test.sh
.github/workflows/: test.yaml
src/: lib.rs  sealed.rs  stable.rs  unstable.rs
src/stable/: functions.rs  methods.rs
src/unstable/: functions.rs  methods.rs
